--- a/app/src/main/res/layout/notefy_activity_main.xml
+++ b/app/src/main/res/layout/notefy_activity_main.xml
@@ -1,36 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:bind="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <data>
-        <variable name="notification" type="org.viktorot.notefy.models.Notification"/>
-    </data>
-
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer_layout"
+    <include
+        layout="@layout/app_bar_notefy_main"
+        android:id="@+id/main_view"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        tools:openDrawer="start">
+        app:headerLayout="@layout/notefy_nav_header"
+        app:menu="@menu/notefy_drawer"/>
 
-        <include
-            layout="@layout/app_bar_notefy_main"
-            android:id="@+id/main_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            bind:notification="@{notification}"/>
-
-        <android.support.design.widget.NavigationView
-            android:id="@+id/navigation_view"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:fitsSystemWindows="true"
-            app:headerLayout="@layout/notefy_nav_header"
-            app:menu="@menu/notefy_drawer"/>
-
-    </android.support.v4.widget.DrawerLayout>
-
-</layout>
+</android.support.v4.widget.DrawerLayout>
