--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -22,7 +22,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/main_activity_content"/>
+    <include layout="@layout/animation_item" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
