--- a/app/src/main/res/layout/animation_item.xml
+++ b/app/src/main/res/layout/animation_item.xml
@@ -1,60 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.MainActivity">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <LinearLayout
+        android:id="@+id/selectedImage"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@android:color/black"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/vjuSelected"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:background="@android:color/black">
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@android:color/black"
+            android:src="@drawable/ic_alarm_black"
+            android:tint="@android:color/white" />
 
-            <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_alarm_black"
-                android:background="@android:color/black"
-                android:tint="@android:color/white"
-                android:layout_gravity="center" />
+    </LinearLayout>
 
-        </LinearLayout>
+    <LinearLayout
+        android:id="@+id/normalImage"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:background="@android:color/white"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:id="@+id/vju"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:background="@android:color/white">
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:background="@android:color/white"
+            android:src="@drawable/ic_alarm_black"
+            android:tint="@android:color/black" />
 
-            <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_alarm_black"
-                android:background="@android:color/white"
-                android:tint="@android:color/black"
-                android:layout_gravity="center" />
+    </LinearLayout>
 
-        </LinearLayout>
-
-    </FrameLayout>
-
-
-
-
-</RelativeLayout>
+</merge>
