- fixes, updates, animations, stuff…

--- a/app/src/main/res/layout/new_note_fragment.xml
+++ b/app/src/main/res/layout/new_note_fragment.xml
@@ -5,11 +5,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:fitsSystemWindows="true"
-    android:background="@android:color/white">
+    android:padding="10dp"
+    android:background="@color/transparent">
 
-    <org.viktorot.notefy.view.IconAnimationView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="#ff0"/>
+
+    <!--<org.viktorot.notefy.view.IconAnimationView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
 
     <android.support.design.widget.TextInputEditText
         android:layout_width="match_parent"
