--- a/app/src/main/res/layout/icon_grid_item.xml
+++ b/app/src/main/res/layout/icon_grid_item.xml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-        <variable
-            name="task"
-            type="org.viktorot.notefy.models.TaskModel" />
-    </data>
-
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:background="?android:selectableItemBackground"
-        android:layout_gravity="center"
-        android:onClick="@{() -> task.onClick()}">
+        android:layout_gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@{String.valueOf(task.duration)}" />
+            android:layout_gravity="center" />
 
     </FrameLayout>
+
 </layout>
 
