--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -23,4 +23,10 @@
         android:layout_height="50dp"
         android:hint="[Name]" />
 
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="[Show dialog]"/>
+
 </LinearLayout>
