--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -29,4 +29,10 @@
         android:layout_height="wrap_content"
         android:text="[Show dialog]"/>
 
+    <Button
+        android:id="@+id/read_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="[Read]"/>
+
 </LinearLayout>
