--- a/app/src/main/res/layout/fragment_new_note.xml
+++ b/app/src/main/res/layout/fragment_new_note.xml
@@ -14,25 +14,33 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/transparent"/>
 
-    <!--<org.viktorot.notefy.view.IconAnimationView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
-
-    <android.support.design.widget.TextInputEditText
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:hint="[Name]" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="[Show dialog]"/>
+        <Button
+            android:id="@+id/image_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true" />
 
-    <Button
-        android:id="@+id/read_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="[Read]"/>
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/image_btn"
+            android:layout_toEndOf="@id/image_btn"
+            android:hint="[Title]" />
+
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title"
+            android:hint="[Content]" />
+
+    </RelativeLayout>
 
 </LinearLayout>
