--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,8 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.AnimationTestActivty">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,10 +25,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email"/>
+        app:srcCompat="@drawable/ic_add_vector"/>
+
+
+    <fragment
+        android:id="@+id/details_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="org.viktorot.notefy.notes_list.NoteListFragment"
+        android:layout_marginTop="?attr/actionBarSize" />
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/fullscreen_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
