--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="corner_radius">5dp</dimen>
     <dimen name="note_background_padding">5dp</dimen>
 
+    <dimen name="icon_item_size">70dp</dimen>
+
 </resources>
