--- a/app/src/main/res/layout/item_icon.xml
+++ b/app/src/main/res/layout/item_icon.xml
@@ -3,6 +3,7 @@
     android:id="@+id/image_btn"
     android:layout_width="@dimen/icon_item_size"
     android:layout_height="@dimen/icon_item_size"
+    android:padding="10dp"
     android:background="?android:selectableItemBackground"
     android:scaleType="fitXY" />
 
