--- a/app/src/main/res/layout/dialog_icon_list.xml
+++ b/app/src/main/res/layout/dialog_icon_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#0f0">
+    android:background="@color/white">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/icon_grid"
