--- a/app/src/main/res/layout/fragment_note_details.xml
+++ b/app/src/main/res/layout/fragment_note_details.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/transparent"/>
+        android:background="@color/transparent" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,15 +22,20 @@
             android:id="@+id/image_btn"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:src="@drawable/ic_bugdroid_vector"
+            android:contentDescription="@null"
             android:layout_alignParentTop="true" />
 
         <android.support.design.widget.TextInputEditText
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:background="@null"
             android:layout_alignParentTop="true"
+            android:layout_marginLeft="10dp"
+            android:singleLine="true"
+            android:maxLines="1"
             android:layout_toRightOf="@id/image_btn"
-            android:layout_toEndOf="@id/image_btn"
             android:hint="[Title]" />
 
 
@@ -38,6 +43,8 @@
             android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@null"
+            android:layout_marginTop="10dp"
             android:layout_below="@id/title"
             android:hint="[Content]" />
 
