--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -27,16 +27,23 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_add_vector"/>
 
-    <fragment
-        android:id="@+id/details_fragment"
+    <!--<fragment-->
+        <!--android:id="@+id/details_fragment"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--class="org.viktorot.notefy.notes_list.NoteListFragment"-->
+        <!--android:layout_marginTop="?attr/actionBarSize" />-->
+
+    <com.bluelinelabs.conductor.ChangeHandlerFrameLayout
+        android:id="@+id/controller_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="org.viktorot.notefy.notes_list.NoteListFragment"
-        android:layout_marginTop="?attr/actionBarSize" />
+        android:layout_marginTop="?attr/actionBarSize"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <FrameLayout
         android:id="@+id/fullscreen_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
