--- a/app/src/main/res/layout/controller_note_details.xml
+++ b/app/src/main/res/layout/controller_note_details.xml
@@ -4,15 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    android:layout_margin="10dp"
-    android:background="@drawable/rounded_corner_background">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/transparent" />
+    android:fitsSystemWindows="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -42,9 +34,10 @@
         <android.support.design.widget.TextInputEditText
             android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@null"
+            android:layout_height="match_parent"
+            android:gravity="top|left|start"
             android:layout_marginTop="10dp"
+            android:background="@null"
             android:layout_below="@id/title"
             android:hint="[Content]" />
 
