- audo grid layout manager

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,8 @@
     <dimen name="note_background_padding">5dp</dimen>
 
     <dimen name="icon_item_size">50dp</dimen>
+
+    <dimen name="card_size">100dp</dimen>
+    <dimen name="grid_item_size">105dp</dimen>
+
 </resources>
