--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -2,38 +2,59 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
-    android:layout_width="@dimen/card_size"
+    android:layout_width="match_parent"
     android:layout_height="@dimen/card_size"
     android:layout_gravity="center_horizontal"
-    android:padding="10dp"
     app:cardBackgroundColor="@color/white"
     app:cardElevation="2dp"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:scaleType="fitXY" />
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:scaleType="fitXY"
+            />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/icon"
+            android:layout_alignTop="@id/icon"
+            android:layout_centerVertical="true"
+            />
 
         <TextView
             android:id="@+id/timestamp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/icon"
+            android:layout_below="@id/title"
+            android:layout_centerVertical="true"
+            />
 
-    </LinearLayout>
+        <ToggleButton
+            android:id="@+id/pin"
+            android:layout_width="@dimen/item_note_pin_size"
+            android:layout_height="@dimen/item_note_pin_size"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/pin_state_drawable"
+            android:textOn="@null"
+            android:textOff="@null"
+            android:checked="false"
+            />
+
+    </RelativeLayout>
 
 
 </android.support.v7.widget.CardView>
