--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,8 @@
     <dimen name="corner_radius">5dp</dimen>
     <dimen name="note_background_padding">5dp</dimen>
 
-    <dimen name="icon_item_size">50dp</dimen>
+    <dimen name="item_note_pin_size">30dp</dimen>
+    <dimen name="icon_size">50dp</dimen>
 
     <dimen name="card_size">100dp</dimen>
     <dimen name="grid_item_size">105dp</dimen>
