--- a/app/src/main/res/menu/note.xml
+++ b/app/src/main/res/menu/note.xml
@@ -5,7 +5,7 @@
     <item
         android:id="@+id/action_pin_note"
         android:title="[Pin note]"
-        android:icon="@drawable/ic_poop_vector"
+        android:icon="@drawable/ic_pin"
         android:visible="true"
         app:showAsAction="always"/>
 
