--- a/app/src/main/res/layout/controller_note_details.xml
+++ b/app/src/main/res/layout/controller_note_details.xml
@@ -1,47 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true">
+    android:padding="10dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageButton
+        android:id="@+id/icon"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/icon_background"
+        android:scaleType="fitXY"
+        android:padding="15dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_bugdroid_vector" />
 
-        <ImageButton
-            android:id="@+id/icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/ic_bugdroid_vector"
-            android:contentDescription="@null"
-            android:layout_alignParentTop="true" />
-
-        <EditText
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@null"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-            android:singleLine="true"
-            android:maxLines="1"
-            android:textSize="26dp"
-            android:layout_toRightOf="@id/icon"
-            android:hint="[Title]" />
+    <EditText
+        android:id="@+id/title"
+        style="@style/NoteTitle"
+        android:layout_marginLeft="10dp"
+        android:hint="@string/note_title_hint"
+        app:layout_constraintBottom_toBottomOf="@id/icon"
+        app:layout_constraintLeft_toRightOf="@id/icon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/icon" />
 
 
-        <EditText
-            android:id="@+id/content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="top|left|start"
-            android:layout_marginTop="10dp"
-            android:background="@null"
-            android:layout_below="@id/title"
-            android:hint="[Content]" />
+    <EditText
+        android:id="@+id/content"
+        style="@style/NoteContent"
+        android:layout_marginTop="10dp"
+        android:gravity="top|left|start"
+        android:hint="@string/note_content_hint"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/icon" />
 
-    </RelativeLayout>
+</android.support.constraint.ConstraintLayout>
 
-</LinearLayout>
