--- a/app/src/main/res/layout/controller_note_details.xml
+++ b/app/src/main/res/layout/controller_note_details.xml
@@ -4,40 +4,46 @@
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="25dp"
+    android:paddingBottom="25dp"
+    >
 
     <ImageButton
         android:id="@+id/icon"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:background="@drawable/icon_background"
-        android:scaleType="fitXY"
         android:padding="15dp"
+        android:scaleType="fitXY"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_bugdroid_vector" />
 
-    <EditText
+    <org.viktorot.notefy.view.NotefyEditText
         android:id="@+id/title"
         style="@style/NoteTitle"
-        android:layout_marginLeft="10dp"
+        android:gravity="center_horizontal"
         android:hint="@string/note_title_hint"
-        app:layout_constraintBottom_toBottomOf="@id/icon"
-        app:layout_constraintLeft_toRightOf="@id/icon"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/content"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/icon" />
+        app:layout_constraintTop_toBottomOf="@id/icon" />
 
 
-    <EditText
+    <org.viktorot.notefy.view.NotefyEditText
         android:id="@+id/content"
         style="@style/NoteContent"
         android:layout_marginTop="10dp"
-        android:gravity="top|left|start"
+        android:gravity="top|center_horizontal"
         android:hint="@string/note_content_hint"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/icon" />
+        app:layout_constraintTop_toBottomOf="@id/title" />
 
 </android.support.constraint.ConstraintLayout>
 
